sandbox/output
Hiker.java:8: error: cannot find symbol
            sum = sum + (rs[i].equeal("") ? 0 : Integer.parseInt(rs[i]));
                              ^
  symbol:   method equeal(String)
  location: class String
1 error
